# KLR

./: .gitignore  Dockerfile  ISA.lean  IsaGen.lean  KLR.lean  Main.lean  README.md  build-docker.sh  copy-lean-c-to-nki.sh  export_fx.py  lake-manifest.json  lakefile.lean  lakew  python.gram  test.json
.github/: CODEOWNERS
.github/workflows/: ci.yml
ISA/: Basic.lean  Generator.lean  Parser.lean  Simplify.lean
KLR/: Compile.lean  CompileHLO.lean  Core.lean  Eval.lean  Export.lean  File.lean  HLR.lean  KLR.lean  Model.lean  NEFF.lean  NKI.lean  Py.lean  Python.lean  Semantics.lean  Serde.lean  TGR.lean  TGRKLR.lean  Trace.lean  Util.lean  lake-manifest.json  lakefile.lean
KLR/BIR/: Function.lean  Instruction.lean  Instructions.lean
KLR/BIR/Compile/: Kernel.lean  Memory.lean  Operators.lean
KLR/Compile/: DFSimp.lean  Dataflow.lean  DataflowTestKernels.lean  NKIDataflow.lean  Pass.lean
KLR/Core/: Basic.lean  CanonicalizeOutputs.lean  FromToJson.lean  Indexing.lean  LowerAP.lean  Operators.lean  Pretty.lean  Tensor.lean
KLR/Extract/: Extract.lean  lake-manifest.json  lakefile.lean
KLR/Extract/Extract/: ASDL.lean  Basic.lean  C.lean  Cpp.lean  Python.lean  Serde.lean  SerdeCpp.lean  ToPython.lean
KLR/Fuzz/: Main.lean
KLR/HLR/: AST.lean  Basic.lean  Compile.lean  ConstFold.lean  Dot.lean  Py.lean
KLR/K/: Common.lean  Operators.lean
KLR/K/K1/: AST.lean  CompileK1.lean  InterpK1.lean
KLR/K/K2/: AST.lean  CompileK2.lean
KLR/K/K3/: AST.lean  CompileK3.lean  DotK3.lean
KLR/KLR/: AST.lean  Basic.lean  Operators.lean  Tensor.lean  test.lean
KLR/NEFF/: Basic.lean
KLR/NKI/: Annotations.lean  Basic.lean  Classes.lean  Lower.lean  Patterns.lean  Pretty.lean  Simplify.lean  SimplifyOperators.lean  TIR.lean  TypeCheck.lean  Typed.lean  Types.lean
KLR/NKI/Typed/: Basic.lean  Common.lean  Context.lean  Elab.lean  Gen.lean  Grammar.lean  PIR.lean  Parser.lean  Python.lean  Syntax.lean  TIR.lean  Test.lean  Tests.lean  Types.lean
KLR/NKI/Typed/Python/: Basic.lean  Grammar.lean  Parser.lean  ParserClaude.lean  ParserUtil.lean  PegParser.lean  PosLemmas.lean  PrettyPrint.lean  Test.lean  Tests.lean  Tokenizer.lean  Util.lean  python.gram
KLR/NRT/: Main.lean  NRT.lean  lake-manifest.json  lakefile.lean  leannrt.c
KLR/Py/: AST.lean  Basic.lean  Gen.lean  Parser.lean  PosLemmas.lean  Pretty.lean  PrettyPrint.lean  Test.lean  Tokenizer.lean  Types.lean  Util.lean
KLR/Semantics/: Examples.lean  Float.lean  KLR.lean  Lib.lean  Logic.lean  Memory.lean  NKI.lean  NML.lean  Notation.lean  ProofRules.lean  SmallStep.lean  Tactics.lean
KLR/Serde/: Attr.lean  Basic.lean  Elab.lean  File.lean  Test.lean
KLR/TGR/: AST.lean  Basic.lean  Compile.lean  Dot.lean  Py.lean
KLR/TGRKLR/: Common.lean  Compile.lean  CompileK2.lean  CompileK3.lean  Dot.lean  DotK3.lean  InterpK2.lean  Operators.lean  PartitionInference.lean
KLR/TGRKLR/K1/: AST.lean  CompileK1.lean  InterpK1.lean
KLR/TGRKLR/K2/: AST.lean  CompileK2.lean  InterpK2.lean
KLR/TGRKLR/K3/: AST.lean  CompileK3.lean  DotK3.lean
KLR/Trace/: Basic.lean  Builtin.lean  Extension.lean  FromNKI.lean  ISA.lean  Lang.lean  NKI.lean  Numpy.lean  Python.lean  Tensor.lean  Term.lean  Types.lean
KLR/Util/: Archive.lean  Base64.lean  BigArray.lean  BitVec.lean  Bstruct.lean  ByteArray.lean  Common.lean  Enum.lean  Float.lean  FromBytes.lean  FromBytesTest.lean  Gensym.lean  Gzip.lean  Hex.lean  Json.lean  ListJson.lean  MD5.lean  Meta.lean  NumBytes.lean  NumBytesTest.lean  Padding.lean  Plausible.lean  SHA256.lean  Sexp.lean  SexpParser.lean  SexpTest.lean  ToBytes.lean  ToBytesTest.lean
KLR/Util/Archive/: Archive.lean  Main.lean  lake-manifest.json  lakefile.lean  lean_archive.c
KLR/Util/FFIUtil/: lake-manifest.json  lakefile.lean  lean-toolchain  lean_util.c
KLR/Util/FFIUtil/include/: lean_util.h
KLR/Util/Gzip/: Gzip.lean  Main.lean  lake-manifest.json  lakefile.lean  lean_gzip.c
build_container/: Dockerfile  README.md  build_container_exec
docs/: disk_format.md  getting_started.md
interop/: CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  setup.py
interop/klr/: CMakeLists.txt  Makefile  NKI.asdl  __init__.py  _cli.py  ast_common.h  ast_file.h  ast_klir.h  ast_nki.h  ast_nki.py  ast_python_core.h  cbor.c  cbor.h  cbor_test.c  cli.py  fromNKI.hpp  frontend.c  frontend.h  frontend_py.h  gather.c  gather.cpp  gather.py  klir_ast.hpp  klir_common.cpp  klir_common.hpp  klir_common_roundtrip_test  klir_common_roundtrip_test.cpp  klir_pretty_print.cpp  klir_pretty_print.hpp  klir_roundtrip_test.cpp  klir_serde.cpp  klir_serde.hpp  klr_ffi.c  lean_ast.h  lean_gzip.c  load_test.cpp  parser.py  peg_parser.c  pegen.sh  refcount_ptr.hpp  (+20 more)
interop/klr/peg_parser/: compat.c  pegen.c  python.gram
interop/neuronxcc/nki/isa/: __init__.py
interop/neuronxcc/nki/language/: __init__.py
interop/nki/: typing.py
interop/nki/isa/: __init__.py  constants.py
interop/nki/language/: __init__.py
interop/nkic/: .gitignore  Makefile  README.md  ast_common.h  ast_nki.h  ast_python_core.h  cbor.c  cbor.h  cbor_test.c  frontend.c  frontend.h  gather.c  peg_parser.c  reformat.sh  region.c  region.h  serde.c  serde_common.c  serde_nki.c  serde_nki.h  serde_python_core.c  serde_python_core.h  simplify.c  test.py  topy_nki.c
interop/nkic/peg_parser/: parser.c  pegen.c  tokenizer.c
interop/test/: Makefile  apis.py  runner.py  test_basic.py  test_class.py  test_dict.py  test_dyn_ap.py  test_enum.py  test_examples.py  test_fromNKI.cpp  test_fstr.py  test_list.py  test_memory.py  test_nki_allocation.py  test_nki_isa_tensor_scalar.py
interop/test/eval/: kernels.py  test_eval.py
interop/test/examples/: average_pool.py  fused_mamba.py  getting_started.py  index.py  layernorm.py  layout.py  matmul.py  mm.py  prof.py  rmsnorm.py  sd_attention.py  tensor_addition.py  transpose2d.py
